# jxr_to_avif

./: CMakeLists.txt  LICENSE-THIRD-PARTY  README.md  main.c
